--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,6 @@
     text-align: center;
     display: flex;
     justify-content: space-around;
-   
     padding: 0.6rem;
     border-radius: 0.5rem;
     margin-top: 0.6rem;
@@ -76,6 +75,9 @@
     min-width: 40rem;
     word-break: break-word;
     align-items: center;
+  }
+  .overduetask {
+    background-color: rgb(225, 83, 83);
   }
   .boxes h1{
     margin: 1rem;
@@ -193,3 +195,4 @@
     font-size: 2rem;
     justify-content: space-around;
   }
+
